--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>SoftwareInternationalTask</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
-<body class="mat-typography">
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>SoftwareInternationalTask</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="mat-typography">
+    <app-root></app-root>
+  </body>
+  <script>
+    let test = [
+      {
+        name: "og:name",
+        content: "title",
+      },
+      {
+        name: "og:description",
+        content: "some description",
+      },
+      {
+        name: "og:image",
+        content: "assets/images/No-Image.png",
+      },
+    ];
+    test.forEach((item) => {
+      let meta = document.createElement("meta");
+      meta.name = item.name;
+      meta.content = item.content;
+      document.head.appendChild(meta);
+    });
+  </script>
 </html>
