--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <meta name="og:name" content="title">
+    <meta name="og:description" content="some description">
+    <meta name="og:image" content="assets/images/No-Image.png">
   </head>
   <body class="mat-typography">
     <app-root></app-root>
