--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,15 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <meta name="og:name" content="title" />
-    <meta name="og:description" content="some description" />
-    <meta name="og:image" content="assets/images/No-Image.png" />
+
+    <meta property="og:title" content="title" />
+    <meta property="og:description" content="some description" />
     <meta
-      name="og:image"
-      content="https://media.istockphoto.com/id/186019678/photo/planet-earth-with-some-clouds-americas-view.jpg?s=1024x1024&w=is&k=20&c=vR7lsU5bXSiQg8d6ksGWWPrLRsLVvExCci5mERlEInA="
+      property="og:image"
+      content="https://yourdomain.com/assets/images/No-Image.png"
     />
+    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:type" content="website" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
