--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
     <meta property="og:description" content="some description" />
     <meta
       property="og:image"
-      content="https://yourdomain.com/assets/images/No-Image.png"
+      content="https://software-international-task.vercel.app//assets/images/No-Image.png"
     />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://software-international-task.vercel.app/" />
     <meta property="og:type" content="website" />
   </head>
   <body class="mat-typography">
