--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,12 @@
       property="og:image"
       content="https://software-international-task.vercel.app//assets/images/No-Image.png"
     />
-    <meta property="og:url" content="https://software-international-task.vercel.app/" />
+    <meta property="og:image:width" content="500px" />
+    <meta property="og:image:height" content="200px" />
+    <meta
+      property="og:url"
+      content="https://software-international-task.vercel.app/"
+    />
     <meta property="og:type" content="website" />
   </head>
   <body class="mat-typography">
