--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="some description" />
     <meta
       property="og:image"
-      content="https://software-international-task.vercel.app/assets/images/test-image.png"
+      content="https://software-international-task.vercel.app/assets/images/test-image2.jpg"
     />
     <meta
       property="og:url"
