--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,11 @@
       rel="stylesheet"
     />
 
-    <meta property="og:title" content="title" />
-    <meta property="og:description" content="some description" />
+    <meta property="og:title" content="this is my custom title" />
+    <meta
+      property="og:description"
+      content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quod accusantium amet asperiores deserunt aliquam! Nisi nulla aliquid exercitationem laboriosam labore placeat, maiores, quam recusandae nihil voluptates perferendis optio? Reiciendis!"
+    />
     <meta
       property="og:image"
       content="https://software-international-task.vercel.app/assets/images/test-image2.jpg"
@@ -25,7 +28,9 @@
       property="og:url"
       content="https://software-international-task.vercel.app/"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="video.other" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="720" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
