--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
 
-    <meta property="og:title" content="this is my custom title" />
+    <!-- <meta property="og:title" content="this is my custom title" />
     <meta
       property="og:description"
       content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quod accusantium amet asperiores deserunt aliquam! Nisi nulla aliquid exercitationem laboriosam labore placeat, maiores, quam recusandae nihil voluptates perferendis optio? Reiciendis!"
@@ -28,11 +28,41 @@
       property="og:url"
       content="https://software-international-task.vercel.app/"
     />
-    <meta property="og:type" content="video.other" />
+    <meta property="og:type" content="video.other" /> -->
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
   </body>
+  <script>
+    const test = [
+      {
+        name: 'og:title',
+        content: 'this is my custom title'
+      },
+      {
+        name: 'og:description',
+        content:'Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam quod accusantium amet asperiores deserunt aliquam! Nisi nulla aliquid exercitationem laboriosam labore placeat, maiores, quam recusandae nihil voluptates perferendis optio? Reiciendis!'
+      },
+      {
+        name: 'og:image',
+        content:'https://software-international-task.vercel.app/assets/images/test-image2.jpg'
+      },
+      {
+        name: 'og:url',
+        content:'https://software-international-task.vercel.app/'
+      },
+      {
+        name: 'og:type',
+        content:'website'
+      }
+    ];
+    test.forEach(item => {
+      const meta = document.createElement('meta');
+      meta.name = item.name;
+      meta.content = item.content;
+      document.head.appendChild(meta);
+    })
+  </script>
 </html>
