--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,11 @@
       property="og:url"
       content="https://software-international-task.vercel.app/"
     />
+    <meta
+      property="og:image:secure_url"
+      content="https://software-international-task.vercel.app/assets/images/test-image2.jpg"
+    />
+    <meta property="og:image:alt" content="A brief description of the image" />
     <meta property="og:type" content="video.other" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
