--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,12 @@
     />
     <meta
       property="og:image"
-      content="https://software-international-task.vercel.app/assets/images/test-image2.jpg"
+      content="https://media.istockphoto.com/id/1458782106/photo/scenic-aerial-view-of-the-mountain-landscape-with-a-forest-and-the-crystal-blue-river-in.jpg?s=1024x1024&w=is&k=20&c=iPdhO2H3jeYh4UWmNlrXNmiiK04iaLykIMiD9u1yDq4="
     />
+    <!-- <meta
+      property="og:image"
+      content="https://software-international-task.vercel.app/assets/images/test-image3.jpg"
+    /> -->
     <meta
       property="og:url"
       content="https://software-international-task.vercel.app/"
