--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,7 @@
     <meta property="og:type" content="video.other" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
+    <meta property="fb:app_id" content="633821416036583" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
