--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,7 @@
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="720" />
     <meta property="fb:app_id" content="633821416036583" />
+    <meta property="og:image:type" content="image/jpeg" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
