--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,7 @@
     <meta property="og:image:alt" content="A brief description of the image" />
     <meta property="fb:app_id" content="633821416036583" />
     <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:type" content="website" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
